k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: party-manager-worker
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: party-manager-worker
  template:
    metadata:
      labels:
        app: party-manager-worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/justgu1/party-manager-worker:latest
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              memory: 1Gi
