k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: party-manager
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`party.justgui.dev`)
      kind: Rule
      middlewares:
        - name: redirect-websecure
          namespace: shared
      services:
        - name: party-manager-api
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: party-manager-tls
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`party.justgui.dev`)
      kind: Rule
      services:
        - name: party-manager-api
          port: 8080
  tls:
    certResolver: letsencrypt
